--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,47 @@
+# -*- mode: gitignore; -*-
+# Created by https://www.gitignore.io/api/emacs
+# modified manually
 *~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+auto-save-list
+tramp
+.\#*
+
+# Org-mode
+.org-id-locations
+*_archive
+
+# flymake-mode
+*_flymake.*
+
+# eshell files
+/eshell/history
+/eshell/lastdir
+
+# reftex files
+*.rel
+
+# AUCTeX auto folder
+/auto/
+
+# cask packages
+.cask/
+dist/
+
+# Flycheck
+flycheck_*.el
+
+# server auth directory
+/server/
+
+# projectiles files
+.projectile
+
 *.pyc
 *.class
 *.log
 pylookup.db
-/server
 /ac-comphist.dat
-/url
 /elpa/*-readme.txt
